# backend/src/routes/store.routes.js
@@ -1,0 +1,7 @@
+const express = require('express');
+const { createNewStore } = require('../controllers/store.controller');
+const router = express.Router();
+
+router.post('/create', createNewStore);
+
+module.exports = router;
